force-app/main/default/objects/copado__Selenium_Settings__c/fields/copado__Provider__c.field-meta.xml
<CustomField>
    <fullName>copado__Provider__c</fullName>
    <label>Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sauce Labs</fullName>
            </value>
            <value>
                <fullName>Browser Stack</fullName>
            </value>
            <value>
                <fullName>Custom/Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>