force-app/main/default/objects/copado__Selenium_Settings__c/fields/copado__Selected_Platforms__c.field-meta.xml
<CustomField>
    <fullName>copado__Selected_Platforms__c</fullName>
    <description>Used by Copado to store the selected platforms to be tested in JSON format.</description>
    <label>Selected Platforms</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>