force-app/main/default/objects/copado__Selenium_Settings__c/fields/copado__Webdriver_Proxy__c.field-meta.xml
<CustomField>
    <fullName>copado__Webdriver_Proxy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables Saucelabs Connect or Browserstack Local Testing</description>
    <inlineHelpText>Use a local proxy to access an org behind a VPN? This enables Saucelabs Connect or Browserstack Local Testing.</inlineHelpText>
    <label>Webdriver Proxy</label>
    <type>Checkbox</type>
</CustomField>