force-app/main/default/objects/copado__Selenium_Settings__c/fields/copado__Webdriver_URL__c.field-meta.xml
<CustomField>
    <fullName>copado__Webdriver_URL__c</fullName>
    <inlineHelpText>Eg for Browserstack:
http://USER:TOKEN@hub.browserstack.com:80/wd/hub

Eg for Saucelabs:
http://USER:TOKEN@ondemand.saucelabs.com:80/wd/hub/</inlineHelpText>
    <label>Webdriver URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>